--- a/permno_code_sp500.ipynb
+++ b/permno_code_sp500.ipynb
@@ -97,7 +97,7 @@
     "                     'gvkey', 'iid', 'start', 'ending', 'ret']]\n",
     "\n",
     "\n",
-    "sp500ccm.to_csv('sp500ccm.csv', index=False)"
+    "sp500ccm.to_csv('data/sp500ccm.csv', index=False)"
    ]
   },
   {
