--- a/project.ipynb
+++ b/project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/r0/zk7h1dpx693gc15c5y61js8w0000gn/T/ipykernel_46524/3861746969.py:27: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "/var/folders/r0/zk7h1dpx693gc15c5y61js8w0000gn/T/ipykernel_49049/1612498734.py:27: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
       "  df = df.groupby(['public_date', 'quantile']).apply(calculate_portfolio_returns).reset_index(drop=True)\n"
      ]
     },
@@ -293,9 +293,9 @@
     }
    ],
    "source": [
-    "df1 = pd.read_csv('query_output.csv', usecols=['gvkey', 'permno', 'public_date', 'bm', 'pcf'])\n",
+    "df1 = pd.read_csv('data/query_output.csv', usecols=['gvkey', 'permno', 'public_date', 'bm', 'pcf'])\n",
     "df1.loc[:, 'cfp'] = 1 / df1['pcf']\n",
-    "df2 = pd.read_csv('prices.csv') \n",
+    "df2 = pd.read_csv('data/prices.csv') \n",
     "df2.rename(columns={'PERMNO': 'permno', 'date': 'public_date'}, inplace=True)\n",
     "df = pd.merge(df1, df2, on=['permno', 'public_date'], how='outer')\n",
     "del df1, df2\n",
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
        "[269 rows x 5 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
